--- a/minecraft/dynmap/index.html
+++ b/minecraft/dynmap/index.html
@@ -69,7 +69,7 @@
             // Example multiple Dynmap servers on external webserver configuration
             servers: {
                 privatesmp: {
-                    label: 'private-smp',
+                    label: 'Private SMP',
                     dynmap: {
                         configuration: 'http://yourmcserver.tplinkdns.com:8123/standalone/creative/MySQL_configuration.php',
                         update: 'http://yourmcserver.tplinkdns.com:8123/standalone/creative/MySQL_update.php?world={world}&ts={timestamp}',
