--- a/minecraft/dynmap/index.html
+++ b/minecraft/dynmap/index.html
@@ -1,17 +1,9 @@
-<HTML>
-
-<HEAD>
-
-<TITLE>This is test </TITLE>
-
-</HEAD>
-
-<FRAMESET>
-
-<FRAMESET rows>
-
-<FRAME src=”http://yourmcserver.tplinkdns.com:8123/“>
-
-</FRAMESET>
-
-</HTML>
+<html>
+<head>
+<title>Your Minecraft Server's Map</title>
+</head>
+<frameset rows=”100%,0″ border=”0″>
+<frame src=”http://yourmcserver.tplinkdns.com:8123/” frameborder=”0″>
+<frame frameborder=”0″>
+</frameset>
+</html>
