--- a/minecraft/dynmap/index.html
+++ b/minecraft/dynmap/index.html
@@ -2,8 +2,8 @@
 <head>
 <title>Your Minecraft Server's Map</title>
 </head>
-<frameset rows=”100%,0″ border=”0″>
-<frame src=”http://yourmcserver.tplinkdns.com:8123” frameborder=”0″>
-<frame frameborder=”0″>
+<frameset rows="100%,0" border="0">
+<frame src="http://yourmcserver.tplinkdns.com:8123" frameborder="0">
+<frame frameborder="0">
 </frameset>
 </html>
