--- a/minecraft/dynmap/index.html
+++ b/minecraft/dynmap/index.html
@@ -68,12 +68,12 @@
 
             // Example multiple Dynmap servers on external webserver configuration
             servers: {
-                creative: {
-                    label: 'Creative',
+                privatesmp: {
+                    label: 'PRIVATE SMP',
                     dynmap: {
                         configuration: 'http://yourmcserver.tplinkdns.com:8123/up/configuration',
                         update: 'http://dynmap.local/standalone/creative/MySQL_update.php?world={world}&ts={timestamp}',
-                        sendmessage: 'http://dynmap.local/standalone/up/sendmessagep',
+                        sendmessage: 'http://dynmap.local/standalone/up/sendmessage',
                         login: 'http://dynmap.local/up/login',
                         register: 'http://dynmap.local/up/register',
                         tiles: 'http://dynmap.local/tiles/',
