--- a/minecraft/dynmap/index.html
+++ b/minecraft/dynmap/index.html
@@ -72,12 +72,12 @@
                     label: 'PRIVATE SMP',
                     dynmap: {
                         configuration: 'http://yourmcserver.tplinkdns.com:8123/up/configuration',
-                        update: 'http://dynmap.local/standalone/creative/MySQL_update.php?world={world}&ts={timestamp}',
-                        sendmessage: 'http://dynmap.local/standalone/up/sendmessage',
-                        login: 'http://dynmap.local/up/login',
-                        register: 'http://dynmap.local/up/register',
-                        tiles: 'http://dynmap.local/tiles/',
-                        markers: 'tiles/'
+                        update: 'http://yourmcserver.tplinkdns.com:8123/MySQL_update.php?world={world}&ts={timestamp}',
+                        sendmessage: 'http://yourmcserver.tplinkdns.com:8123/up/sendmessage',
+                        login: 'http://yourmcserver.tplinkdns.com:8123/up/login',
+                        register: 'http://yourmcserver.tplinkdns.com:8123/up/register',
+                        tiles: 'http://yourmcserver.tplinkdns.com:8123/tiles/',
+                        markers: 'http://yourmcserver.tplinkdns.com:8123/tiles/'
                     }
                 },
 	    },
