--- a/minecraft/dynmap/index.html
+++ b/minecraft/dynmap/index.html
@@ -71,13 +71,13 @@
                 privatesmp: {
                     label: 'PRIVATE SMP',
                     dynmap: {
-                        configuration: 'http://yourmcserver.tplinkdns.com:8123/up/configuration',
-                        update: 'http://yourmcserver.tplinkdns.com:8123/MySQL_update.php?world={world}&ts={timestamp}',
-                        sendmessage: 'http://yourmcserver.tplinkdns.com:8123/up/sendmessage',
-                        login: 'http://yourmcserver.tplinkdns.com:8123/up/login',
-                        register: 'http://yourmcserver.tplinkdns.com:8123/up/register',
-                        tiles: 'http://yourmcserver.tplinkdns.com:8123/tiles/',
-                        markers: 'http://yourmcserver.tplinkdns.com:8123/tiles/'
+                        configuration: 'https://mcmap.plutonium.cluster.ws/up/configuration',
+                        update: 'https://mcmap.plutonium.cluster.ws/up/world/{world}/{timestamp}',
+                        sendmessage: 'https://mcmap.plutonium.cluster.ws/up/sendmessage',
+                        login: 'https://mcmap.plutonium.cluster.ws/up/login',
+                        register: 'https://mcmap.plutonium.cluster.ws/up/register',
+                        tiles: 'https://mcmap.plutonium.cluster.ws/tiles/',
+                        markers: 'https://mcmap.plutonium.cluster.ws/tiles/'
                     }
                 },
 	    },
